[project]
name = "course-2025-agentic-ai-code"
version = "0.1.0"
description = ""
authors = [
    {name = "Gianluca Aguzzi",email = "gianluca.aguzzi@studio.unibo.it"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0.0"
dependencies = [
    "jupyterlab (>=4.4.10,<5.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "langchain (>=1.0.3,<2.0.0)",
    "langchain[openai] (>=1.0.3,<2.0.0)",
    "langchain-mcp-adapters (>=0.1.12, <1.0.0)",
    "ollama (>=0.6.0,<1.0.0)",
    "openai (>=2.7.1,<3)",
    "mcp (>=1.20.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
